# rust-developing-websites

./: Cargo.toml  README.md  diesel.toml  docker-compose.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: install-required-tools.sh
migrations/2024-08-13-024922_create_cates/: up.sql
migrations/2024-08-26-172711_create_cats/: up.sql
src/: main.rs  models.rs  schema.rs
static/: index.html
