[package]
name = "catdex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = "4.8.0"
handlebars = { version = "6.0.0", featires = ["dir_source"] }
serde_json = "1.0.124"
